--- a/style.css
+++ b/style.css
@@ -290,6 +290,10 @@ body {
     background-color: #7f6a56;
 }
 
+.you-won {
+    display: none;
+}
+
 .game-over {
     position: absolute;
     top: 0;
